--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@ crossorigin="anonymous"
               document.getElementById("dashboard-href").style.color = "white";
               document.getElementById("menu").style.backgroundColor = "black";
               document.getElementById("Dark_Mode").style.color = "white";
-              document.getElementById("hamburgerBH").style.color = "blue";
-              document.getElementById("hamburgerBH").style.backgroundColor = "blue";
+
 
 
               if( /Android|webOS|iPhone|iPad|Macintosh|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
@@ -123,7 +122,7 @@ crossorigin="anonymous"
 </nav>
 <div  class="menu-button w-nav-button  ">
 <!-- <img src="https://uploads-ssl.webflow.com/62ee9b5a629f1833c14eb4e1/62ee9b5a629f18a4a94eb506_menu-icon.png" width="22" alt="" class="menu-icon bg-white-2 " /> -->
-<i id="hamburgerBH" class="fa fa-bars menu-icon  bg bg-dark " width="22" height="50"></i>
+<i class="fa fa-bars menu-icon  hamburgermenu " width="22" height="50"></i>
 </div>
 <a style="left :220px" href="login.php" class="button cc-contact-us w-inline-block">
 <div class="glyphicon glyphicon-chevron-right">Log In</div>
